--- a/Araç Kiralama Takibi/Anasayfa.Master
+++ b/Araç Kiralama Takibi/Anasayfa.Master
@@ -20,7 +20,7 @@
       <nav>
   <ul>
     <li><a href="MusteriYonetimi.aspx">Müşteri Yönetimi</a></li>
-    <li><a href="#">Araç Yönetimi</a></li>
+    <li><a href="AracYonetimi.aspx">Araç Yönetimi</a></li>
     <li><a href="#">Bakım Yönetimi</a></li>
     <li><a href="#">Sözleşme Yönetimi</a></li>
     <li><a href="#">Gelir/Gider Yönetimi</a></li>
