--- a/Araç Kiralama Takibi/Anasayfa.Master
+++ b/Araç Kiralama Takibi/Anasayfa.Master
@@ -22,7 +22,7 @@
     <li><a href="MusteriYonetimi.aspx">Müşteri Yönetimi</a></li>
     <li><a href="AracYonetimi.aspx">Araç Yönetimi</a></li>
     <li><a href="#">Sözleşme Yönetimi</a></li>
-    <li><a href="#">Gelir/Gider Yönetimi</a></li>
+    <li><a href="GelirGiderYonetimi.aspx">Gelir/Gider Yönetimi</a></li>
     <li><a href="SistemYonetimi.aspx">Sistem Yönetimi</a></li>
       <li><a href="Giriş.aspx">Çıkış</a></li>
   </ul>
