--- a/Araç Kiralama Takibi/Anasayfa.Master
+++ b/Araç Kiralama Takibi/Anasayfa.Master
@@ -21,7 +21,7 @@
   <ul>
     <li><a href="MusteriYonetimi.aspx">Müşteri Yönetimi</a></li>
     <li><a href="AracYonetimi.aspx">Araç Yönetimi</a></li>
-    <li><a href="#">Sözleşme Yönetimi</a></li>
+    <li><a href="SozlesmeYonetimi.aspx">Sözleşme Yönetimi</a></li>
     <li><a href="GelirGiderYonetimi.aspx">Gelir/Gider Yönetimi</a></li>
     <li><a href="SistemYonetimi.aspx">Sistem Yönetimi</a></li>
       <li><a href="Giriş.aspx">Çıkış</a></li>
